# neurs_project

./: .gitlab-ci.yml  Cargo.toml  README.adoc
cmnc/: Cargo.toml  README.adoc
cmnc_console/: Cargo.toml  README.md
cnmc/: Cargo.toml  README.adoc
cnmc/src/: chain.rs  lib.rs  prelude.rs
cnmc/src/nets/: mod.rs  prelude.rs  vectorizer.rs
cnmc/src/nets/vectorizer/: body.rs  mod.rs  prelude.rs  train.rs
cnmc_console/: Cargo.toml  README.adoc
neurs/: Cargo.toml  README.adoc
neurs/src/: activations.rs  assembly.rs  frame.rs  interface.rs  lib.rs  neuralnet.rs  prelude.rs
neurs/src/train/: interface.rs  jitterstrat.rs  label.rs  mod.rs  prelude.rs  test_jitterstrat.rs  trainer.rs
neurs/tests/: layer.rs  train_consistency.rs
styliso/: Cargo.toml  README.adoc
styliso/src/: main.rs  prelude.rs
styliso/src/autoenc/: interface.rs  mod.rs  prelude.rs
styliso/src/image/: data.rs  labeled.rs  mod.rs  png.rs  prelude.rs
wordmarkov/: Cargo.toml  README.adoc
wordmarkov/src/: lib.rs  main.rs  prelude.rs
wordmarkov/src/chain/: body.rs  mod.rs  prelude.rs  test_body.rs  token.rs
wordmarkov/src/chain/selectors/: fixed.rs  interface.rs  mod.rs  prelude.rs  random.rs
wordmarkov/src/sentence/: lex.rs  mod.rs  prelude.rs  test_lex.rs  test_token.rs  token.rs
wordmarkov/tests/: body.rs  lex.rs  token.rs
