[package]
name = "cnmc"
description = "Convolutional Neural Markov Chain: An advanced sentence generation model, using a Markov chain (wordmarkov) and neural networks (neurs)"
version = "0.1.0-pre0"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["neural", "markov", "chatbot", "machine-learning", "neural-network"]
website = "https://github.com/wallabra/neurs_project"
authors = [
	"Gustavo Ramos Rehermann (wallabra) <rehermann6046@gmail.com>"
]
readme = "README.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neurs = { path = "../neurs" }
wordmarkov = { path = "../wordmarkov" }
