[package]
name = "cnmc_console"
description = "A program to generate, save, load and interact with a cnmc brain"
version = "0.1.0-pre0"
edition = "2021"
authors = [
    "Gustavo Ramos \"Gustavo6046\" Rehermann <rehermann6046@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnmc = { path = "../cnmc" }
