[package]
name = "cnmc_console"
description = "A program to generate, save, load and interact with a cnmc brain"
version = "0.1.0-pre0"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["console", "markov", "chatbot", "machine-learning", "cnmc"]
website = "https://github.com/wallabra/neurs_project"
authors = [
	"Gustavo Ramos Rehermann (wallabra) <rehermann6046@gmail.com>"
]
readme = "README.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cnmc = { path = "../cnmc" }
