[package]
name = "neurs"
description = "A simple, feed-forward-only, but efficient, neural network and reinforcement learning library"
version = "0.1.0-pre1"
edition = "2021"
authors = [
    "Gustavo Ramos \"Gustavo6046\" Rehermann <rehermann6046@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
tinyvec = "1.6.0"
