[package]
name = "neurs"
description = "A simple, feed-forward-only, but efficient, neural network and reinforcement learning library"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["neural", "neural network", "evolution", "machine learning", "lightweight"]
repository = "https://github.com/wallabra/neurs_project"
authors = [
    "Gustavo Ramos \"Gustavo6046\" Rehermann <rehermann6046@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
float_eq = "1.0.0"
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt"] }
