[package]
name = "neurs"
description = "A simple, feed-forward-only, but efficient, neural network and reinforcement learning library"
version = "0.2.0-pre1"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["neural", "neural-network", "evolution", "machine-learning", "lightweight"]
repository = "https://github.com/wallabra/neurs_project"
authors = [
	"Gustavo Ramos Rehermann (wallabra) <rehermann6046@gmail.com>"
]
readme = "README.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
float_eq = "1.0.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5.3"
serde = { version = "1.0.147", optional = true }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt"] }
