[package]
name = "styliso"
description = "An experiment in isolating the style between images using autoencoders and neural networks."
version = "0.1.0"
edition = "2021"
authors = [
    "Gustavo Ramos \"Gustavo6046\" Rehermann <rehermann6046@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color_space = "0.5.3"
neurs = { version = "0.1.0", path = "../neurs" }
png = "0.17.5"

