[package]
name = "styliso"
description = "An experiment in isolating the style between images using autoencoders and neural networks."
version = "0.1.0-pre0"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["neural", "image", "machine-learning", "autoencoder", "classifier"]
website = "https://github.com/wallabra/neurs_project"
authors = [
	"Gustavo Ramos Rehermann (wallabra) <rehermann6046@gmail.com>"
]
readme = "README.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color_space = "0.5.3"
neurs = { path = "../neurs" }
png = "0.17.5"

