[package]
name = "wordmarkov"
description = "A simple but flexible Markov chain library, specifically for text sentences, which handles punctuation and whitespace"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE.md"
keywords = ["markov", "markov-chain", "text", "chatbot", "lightweight"]
repository = "https://github.com/wallabra/neurs_project"
authors = [
	"Gustavo Ramos \"Gustavo6046\" Rehermann <rehermann6046@gmail.com>"
]
readme = "README.adoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
